selfhost/test/parser/set_error_no_comma.out
Error at %FILE_NAME%:1:5
Unexpected token 'int', expected one of ',', '}':
  |  #{1 2}
         ^